--- a/index.html
+++ b/index.html
@@ -48,10 +48,23 @@
                                         <input type="text" placeholder="1/10/2010" id="datetime" />
                                     </li>
                                     <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                                        <label for="city">Enter City</label>
+                                        <input type="text" placeholder="city..." id="city" />
+                                    </li>
+                                    <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                                        <label for="state">Enter State</label>
+                                        <input type="text" placeholder="state..." id="state" />
+                                    </li>
+                                    <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                                        <label for="shape">Enter Shape</label>
+                                        <input type="text" placeholder="shape..." id="shape" />
+                                    </li>
+                                    <li class="list-group-item bg-dark">
                                         <button id="filter-btn" type="button" class="btn bg-dark">Filter Table</button>
                                     
                                     </li>
                                 </ul>
+                            </form>    
                       </div>
                         <div class="col-md-9">
                             <table class="table table-striped">
@@ -75,7 +88,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+    <script src="static/js/app1.js"></script>
     
 </body>
 </html>
