--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                                             <input type="text" placeholder="state..." id="state" />
                                         </li>
                                         <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
+                                            <label for="country">Enter Country</label>
+                                            <input type="text" placeholder="state..." id="country" />
+                                        </li>
+                                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                                             <label for="shape">Enter Shape</label>
                                             <input type="text" placeholder="shape..." id="shape" />
-                                        </li>
-                                        <li class="list-group-item bg-dark">
-                                            <button id="filter-btn" type="button" class="btn bg-dark">Filter Table</button>
-                                        
                                         </li>
                                     </ul>
                                 </form>    
@@ -90,7 +90,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <script src="static/js/app1.js"></script>
+    <script src="static/js/app.js"></script>
     
 </body>
 </html>
